--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
- <head>
- <title>Page Title</title>
- </head>
- <body>
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        <p>Sanya harosh</p>
+        <img src="da.jpg" alt="">
+    </div>
+</body>
 </html>
