--- a/index.html
+++ b/index.html
@@ -3,12 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rostyslav Yaremko</title>
+    <style>
+        body{
+            background-color: #D3D3D3;
+            color: aqua;
+        }
+        h1{
+            color: navy;
+            margin-left: 20px;
+        }
+        p{
+            color: green;
+            font-style: italic;
+        }
+        a{
+            a { color: red; } a:hover { color: blue; }
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <p>Sanya harosh</p>
-        <img src="da.jpg" alt="">
-    </div>
+    <h1>Rostyslav Yaremko</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae amet commodi, voluptate facilis aspernatur similique nulla eius, repudiandae saepe sed eum? At ducimus quod quisquam odit vitae voluptate magni reiciendis!</p>
+    <a href="https://www.google.com/">g00gle</a>
+    <ul>Lorem, ipsum dolor.</ul>
+    <ul>Lorem ipsum dolor sit amet.</ul>
+    <ul>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus, nulla?</ul>
+    <img src="https://img.freepik.com/free-photo/bonfire-flame-element-realistic-burning-fire-image_53876-142941.jpg?size=626&ext=jpg&ga=GA1.1.735520172.1710374400&semt=sph" alt="Fire">
+    <table>
+        <tr>
+          <th>nazwa</th>
+          <th>data</th>
+          <th>opis</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+      <form>
+        <label for="name">Enter your name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+        <label for="newsletter">
+          <input type="checkbox" id="newsletter" name="newsletter" value="yes">
+          Subscribe to our newsletter?
+        </label><br><br>
+        <button type="submit">wyslac</button>
+      </form>
 </body>
 </html>
