--- a/LAB 7 - 8/index.html
+++ b/LAB 7 - 8/index.html
@@ -9,6 +9,36 @@
 
 </head>
 <body>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            width: 300px;
+            padding: 20px;
+            background-color: #f5f5f5;
+            border-radius: 20px;
+        }
+
+        .control {
+            padding: 5px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .actions {
+            justify-content: center;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
     <h1>Formularz rejestracyjny</h1>
 
     <form id="formularz">
@@ -28,6 +58,10 @@
         <input type="password" id="haslo" name="haslo" required minlength="8">
         <div class="error"></div>
 
+        <label>Potwórz Hasło: </label>
+            <input type="password" name="confirm-password">
+            <span class="error"></span>
+
         <label for="plec">Płeć:</label>
         <select id="plec" name="plec" required>
             <option value="">Wybierz</option>
@@ -37,7 +71,7 @@
         <div class="error"></div>
 
         <label for="telefon">Telefon:</label>
-        <input type="tel" id="telefon" name="telefon" required>
+        <input type="telefon" id="telefon" name="telefon" required>
         <div class="error"></div>
 
         <label for="dataUrodzenia">Data urodzenia:</label>
@@ -54,6 +88,35 @@
         <option value="US">Stany Zjednoczone</option>
         </select>
         <div class="error"></div>
+        <label>Województwo: </label>
+            <!--Atrybut disabled wyłącza element-->
+            <input type="text" disabled name="province">
+            <!--Atrybut hidden ukrywa element-->
+            <select name="province" disabled hidden>
+                <option></option>
+                <option value="Podkarpacie">Podkarpacie</option>
+                <option value="Małopolska">Małopolska</option>
+                <option value="Mazowsze">Mazowsze</option>
+                <option value="Wielkopolska">Wielkopolska</option>
+            </select>
+            <span id="provinceError" class="error"></span>
+        </div>
+        <div class="control">
+            <label>Adres zamieszkania: </label>
+            <input type="text" disabled name="address">
+            <span class="error"></span>
+        </div>
+        <div>
+            <!--Atrybut checked domyślnie zaznacza checkbox-->
+            <input type="checkbox" checked name="hasSameContactAddress">
+            <label>Adres korespodencyjny taki sam jak zamieszkania </label>
+        </div>
+        <div class="contactAddress" hidden>
+            <div class="control">
+                <label>Adres korespodencyjny: </label>
+                <input type="text" disabled name="contactAddress">
+                <span class="error"></span>
+            </div>
 
         <input type="submit" value="Zapisz">
     </form>
